--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,42 @@
-#map {position: absolute; top:0; bottom:0; left:0; right:0;}
+#intro{width:100%; height: 15%;}
+/*#wrapper{position: relative; top:15%; height: 85%; width: 100%}*/
+#map {
+    position: absolute; 
+    width:98%; 
+    top:30%; 
+    bottom:0;
+}
+#toggles {
+    position:relative; 
+    width: 70px; 
+    height: 50px;
+    top:15%; 
+    background-color:bisque;
+}
+
+section{
+    /*display:flex;*/
+    width:98%;
+
+}
+
+#slider{
+    width:100%;
+    height:30px;
+    background: lightseagreen;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+    border: solid gainsboro 2px;
+    border-radius: 5px;
+}
+
+#slider:hover{
+    opacity: 1;
+}
+
+.sliderTicks{
+    display: flex;
+    justify-content:space-between;
+    padding: 0 5px;
+}
