--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,33 @@
-#intro{width:100%; height: 15%;}
+#title{
+    width:100%; height: 15%;
+    background-color: cornflowerblue;
+}
+
+#title h1{
+    font-family:'Skranji', cursive, sans-serif;
+    font-size: 72pt;
+    margin: 0px 0px;
+    text-align: center;
+    color:antiquewhite;
+    
+}
+
+#intro{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:12pt;
+    margin: 10px 0px;
+    background-color: antiquewhite;
+    color:cornflowerblue;
+    padding:5px 20px
+}
+
 /*#wrapper{position: relative; top:15%; height: 85%; width: 100%}*/
 #map {
     position: absolute; 
     width:98%; 
-    top:40%; 
+    top:30%; 
     bottom:0;
+    margin: 0px 0px;
 }
 
 .slide-section{
@@ -60,6 +83,15 @@
 }
 
 .button-div {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.background-div {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
