--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@
 }
 
 #intro{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Fira Sans Condensed', sans-serif;
     font-size:12pt;
     margin: 10px 0px;
     background-color: antiquewhite;
     color:cornflowerblue;
+    color:
     padding:5px 20px
 }
 
