Adding source link

--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,8 @@
 #slide-label {
     text-align: center;
 }
+
+#source{
+    font-size: smaller;
+    font-family: 'Courier New', Courier, monospace;
+}
