--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 .box #intro{
     flex:0 1 auto;
-    font-family: 'Fira Sans Condensed', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size:13pt;
     margin: 10px 0px;
     background-color: antiquewhite;
